--- a/.travis.yml
+++ b/.travis.yml
@@ -1,29 +1,17 @@
 # Config file for automatic testing at travis-ci.org
+# This file will be regenerated if you run travis_pypi_setup.py
 
 language: python
 python:
-  - 3.6
   - 3.5
-  - 3.4
-  - 2.7
 
-# Command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
+# command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install: pip install -U tox-travis
 
-# Command to run tests, e.g. python setup.py test
-script: tox
+# command to run tests, e.g. python setup.py test
+install:
+  - pip install -r requirements_dev.txt
 
-# Assuming you have installed the travis-ci CLI tool, after you
-# create the Github repo and add it to Travis, run the
-# following command to finish PyPI deployment setup:
-# $ travis encrypt --add deploy.password
-deploy:
-  provider: pypi
-  distributions: sdist bdist_wheel
-  user: jun-harashima
-  password:
-    secure: PLEASE_REPLACE_ME
-  on:
-    tags: true
-    repo: jun-harashima/paper
-    python: 3.6
+# command to run tests
+script:
+  - make test
