--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -6,9 +6,9 @@ flake8==3.5.0
 tox==2.9.1
 coverage==4.5.1
 Sphinx==1.7.0
-pyquery==1.4.0
 pdfminer.six==20170720
 whoosh==2.7.4
 texttable>=1.0
 sphinx_rtd_theme==0.4.0
 nltk==3.3
+gsch==0.2.4
